Adicionada funcionalidade de nota mínima e botão de limpar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 </tr>
             </tfoot>
         </table>
+        <butoon id="limpar">Limpar</butoon>
     </div>
     <script src="./main.js"></script>
 </body>
